--- a/index.html
+++ b/index.html
@@ -1081,7 +1081,7 @@
       </div>
 
 
-      <div class='full parallax' style='background-image: url(https://geografia.com.au/images/Geografia/customers-bg.jpg); color: #fff;'>
+      <div class='full parallax' style='background-image: url(http://geografia.com.au/images/Geografia/customers-bg.jpg); color: #fff;'>
   <div class='row'>
     <div class='large-12 columns'>
       <div class="mod modSectionHeader ">
@@ -1287,7 +1287,7 @@
     <div class='large-3 medium-3 columns'>
       <h1>
         <a href='index.html'>
-          <img alt="" src="https://geografia.com.au//images/logo-grey.png" />
+          <img alt="" src="http://geografia.com.au//images/logo-grey.png" />
         </a>
       </h1>
       <p>©2016 Geografia.</p>
