--- a/lab/index.html
+++ b/lab/index.html
@@ -136,7 +136,7 @@
             
             <li class="economics">
 
-  <a href='https://geografia.com.au/city-atlas'>
+  <a href='http://geografia.com.au/city-atlas'>
     <div class="item-title" style="font-weight:bold;font-size:14px;z-index: 1;position: absolute;padding-left:50%;padding-left:50%;width: 100%;color: white;background-color: #222;opacity: 0.9;">City Atlas</div>
 
     <img style="width:400px;height:269px;background-size:cover;background-image:url(/img/lab/city_atlas.png);" alt="" src="" />
@@ -168,7 +168,7 @@
             
             <li class="economics">
 
-  <a href='https://geografia.com.au/victowns'>
+  <a href='http://geografia.com.au/victowns'>
     <div class="item-title" style="font-weight:bold;font-size:14px;z-index: 1;position: absolute;padding-left:50%;padding-left:50%;width: 100%;color: white;background-color: #222;opacity: 0.9;">Victowns</div>
 
     <img style="width:400px;height:269px;background-size:cover;background-image:url(/img/lab/victowns.png);" alt="" src="" />
@@ -195,7 +195,7 @@
     <div class='large-3 medium-3 columns'>
       <h1>
         <a href='index.html'>
-          <img alt="" src="https://geografia.com.au//images/logo-grey.png" />
+          <img alt="" src="http://geografia.com.au//images/logo-grey.png" />
         </a>
       </h1>
       <p>©2016 Geografia.</p>
