--- a/projects/knowledge-jobs-in-melbourne-s-se/index.html
+++ b/projects/knowledge-jobs-in-melbourne-s-se/index.html
@@ -181,7 +181,7 @@
     <div class='large-3 medium-3 columns'>
       <h1>
         <a href='index.html'>
-          <img alt="" src="https://geografia.com.au//images/logo-grey.png" />
+          <img alt="" src="http://geografia.com.au//images/logo-grey.png" />
         </a>
       </h1>
       <p>©2016 Geografia.</p>
